# electrode_brain_DEVS_atomic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_sim.sh
analysis/: analyze_logs.ipynb
main/: CMakeLists.txt  main.cpp
main/include/: adder.hpp  background_noise.hpp  brain.hpp  electrode.hpp  neuron.hpp  top.hpp
main/tests/: test_adder.cpp  test_background_noise.cpp  test_electrode.cpp  test_neuron.cpp  test_top.cpp
